--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="style.css">
 	<!-- 69 is my fav number -->
 </head>
-<body>
+<body style="background-image: url('highQualityHH.gif');">
 	<section id="center">
 		<section id="innerBorder">
 				<a href="aboutme.html">About me</a><br>
@@ -24,6 +24,7 @@
 	</section>
 </body>
 <style>
+
 	#innerBorder {
 		background-image: linear-gradient(to bottom, rgb(255, 0, 0) 69%, rgb(255, 255, 0));
 	}
